# simple_shield

./: .gitignore  .mocharc.json  README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
barretenberg.js/: Dockerfile  tsconfig.json
barretenberg.js/dest/: package.json
barretenberg.js/dest-es/address/: eth_address.d.ts  eth_address.d.ts.map  eth_address.js  grumpkin_address.d.ts  grumpkin_address.d.ts.map  grumpkin_address.js  index.js
barretenberg.js/dest-es/asset/: index.d.ts  index.d.ts.map  index.js
barretenberg.js/dest-es/block_source/: index.js  server_block_source.d.ts  server_block_source.d.ts.map  server_block_source.js
barretenberg.js/dest-es/blockchain/: asset.d.ts  asset.d.ts.map  asset.js  blockchain.d.ts.map  blockchain.js  blockchain_status.d.ts.map  blockchain_status.js  ethereum_signer.js  index.d.ts  index.js  price_feed.js  typed_data.js
cache/: solidity-files-cache.json
circuits/: Nargo.toml  Prover.toml  Verifier.toml
circuits/mimc_tree/: Nargo.toml  Prover.toml  Verifier.toml
circuits/pedersen_tree/: Nargo.toml  Prover.toml  Verifier.toml
circuits/src/: main.nr
contracts/: MerkleTreeWithHistory.sol  OriginalSimpleShield_vk.sol  PrivateTransfer.sol  PrivateTransferBasic.sol  UltraVerifierBasicTransfer.sol  UltraVerifierPrivateTransfer.sol  plonk_vk.sol  plonk_vk_basic_transfer.sol  plonk_vk_private_transfer.sol
scripts/: compileHasher.ts  generate_sol_verifier.ts
src/: main.rs
test/: PrivateTransfer-basic.test.ts  PrivateTransfer-full.test.ts  PrivateTransfer.test.ts
test-rs/: Cargo.toml
test-rs/src/: main.rs
utils/: MerkleTree.ts  MerkleTreeMiMC.ts  test_helpers.ts
(+207 files in other folders)
