[package]
name = "simple_shield"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# aztec_backend = { git = "https://github.com/noir-lang/aztec_backend", rev = "01b922adcb5a9d70b2d12304e1cb7487d9f28188" }
aztec_backend = { git = "https://github.com/noir-lang/aztec_backend", rev = "951c0d2b9b0c76aa7747f47602f9f5a5c399f7fd", default-features = false, features = [
    "wasm-base",
] }
# aztec_backend = { path = "../../../noir-backends/aztec_backend" }
acvm = { git = "https://github.com/noir-lang/noir", features = ["bn254"] }
# acvm = { path = "../../../noir/crates/acvm", features = ["bn254"] }

tempfile = "3.2.0"
blake2 = "0.9.1"
